--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "chalk": "^2.4.2",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
