--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.11.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4"
