--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.16",
     "@mui/system": "^5.15.15",
-    "@mui/x-date-pickers": "^7.3.2",
+    "@mui/x-date-pickers": "^7.4.0",
     "@react-google-maps/api": "^2.19.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -22,6 +22,7 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.11",
     "react": "^18.3.1",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
