--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
+    "@date-io/date-fns": "^3.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fullcalendar/interaction": "^6.1.11",
@@ -20,6 +21,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "crypto-js": "^4.2.0",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.2.0",
     "react": "^18.3.1",
