--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.2.0",
+    "querystring": "^0.2.1",
     "react": "^18.3.1",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
